module(name = "netconan", version = "0.0.0")

bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "batfish", version = "0.0.0")

local_path_override(
    module_name = "batfish",
    path = "../batfish",
)

# Declare maven extension usage - batfish and other modules contribute artifacts
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [],
    known_contributing_modules = [
        "batfish",
        "bazel_worker_java",
        "protobuf",
    ],
)
use_repo(maven, "maven")
