[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "netconan"
description = "Netconan network configuration anonymization utilities"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Intentionet", email = "netconan-dev@intentionet.com"},
]
keywords = ["network", "configuration", "anonymizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bidict<1.0.0",
    "configargparse<2.0.0",
    "passlib<2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["flake8<8.0.0", "flake8-docstrings<2.0.0", "pydocstyle<6.0.0"]
test = [
    "pytest>=7",
    "pytest-cov<6.0.0",
    "requests_mock<2.0.0",
    "testfixtures<7.0.0",
]

[project.scripts]
netconan = "netconan.netconan:main"

[project.urls]
Homepage = "https://github.com/intentionet/netconan"

[tool.setuptools.packages.find]
include = ["netconan", "netconan.*"]

[tool.setuptools.package-data]
netconan = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "netconan.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=netconan"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["configargparse.*", "passlib.*", "bidict.*", "testfixtures.*"]
ignore_missing_imports = true
